@@ -1,0 +1,11 @@
+This page preloads 2 images in an onLoad function.
+The image object.src is expected to be the full path to the image, relative to the document base.
+To match WinIE (but not FireFox), we resolve the image path in the getter, rather than the setter, allowing for pages to change the Document base URL via javascript and have object.src reflect said change.
+
+SUCCESS (document.images[0].src = http://www.apple.com/test.jpg)
+SUCCESS (IconImages['grey'].src = http://www.apple.com/test.jpg)
+After changing the base URL:
+
+SUCCESS (document.images[0].src = http://www.apple.com/test.jpg)
+SUCCESS (IconImages['grey'].src = http://www.example.com/test.jpg)
+
